--- a/src/Class/Class.scss
+++ b/src/Class/Class.scss
@@ -19,16 +19,26 @@ $colors:
   width: 12.5vh;
   height: 12.5vh;
   padding: 20px;
-  color: white;
   text-transform: uppercase; 
   transition: transform 0.3s linear,
   background-color 0.3s linear;
   // margin: 1px 0 0 1px;
+  text-shadow: 1px 0 1px #000, 
+0 1px 1px #000, 
+-1px 0 1px #000, 
+0 -1px 1px #000;
+ 
   @each $index, $color in $colors {
     &:hover:nth-child(#{$index}) {
       background-color: $color;
       color: black;
   box-shadow: 1px 1px 5px 0 grey;
+
+    } 
+  }
+  @each $index, $color in $colors {
+    &:nth-child(#{$index}) {
+      color: $color;
 
     } 
   }
