--- a/src/Class/Class.scss
+++ b/src/Class/Class.scss
@@ -33,6 +33,7 @@ $colors:
       background-color: $color;
       color: black;
   box-shadow: 1px 1px 5px 0 grey;
+  text-shadow: 0 0 0 #000;
 
     } 
   }
